# Tactile-Utils

./: .gitignore  MANO_ASSETS.md  README.md  pyproject.toml
assets/docs/papers/: 25-12-UniTacHand.md
assets/docs/plans/: inspire_tactile_to_mano_technical_plan.md
configs/: inspire_hand_sensor_mount.yaml
results/tactile_layout_3d_projection/: 20260527_170000_smoke_inspire_right_points.pkl  20260527_170000_smoke_xhand_right_points.pkl
scripts/: run_online_real_data_test.py
src/offline/: README.md  __init__.py  cli.py  tactile_to_mano_projection.py
src/offline/plans/: semantic_tactile_to_mano_projection_plan.md
src/offline_shape_alignment/: README.md  __init__.py  alignment.py  cli.py  mano.py  mano_torch.py  reference_pose.py  render.py  sampling.py  shape_optimization.py  xhand.py
src/offline_shape_alignment/plan/: feasibility_assessment.md  offline_shape_alignment_plan.md
src/online/: README.md  __init__.py  cli.py  retarget_calibration.py  tactile_mapping.py
src/sub_modules/: __init__.py
src/sub_modules/offline_shape_alignment/: README.md  __init__.py  alignment.py  cli.py  mano.py  mano_torch.py  reference_pose.py  render.py  sampling.py  shape_optimization.py  types.py  xhand.py
src/sub_modules/offline_shape_alignment/plan/: feasibility_assessment.md  offline_shape_alignment_plan.md
src/sub_modules/tactile_layout_3d_projection/: README.md  __init__.py  cli.py  config.py  geometry.py  inspire.py  urdf.py  xhand.py
src/tactile_layout_3d_projection/: __init__.py  cli.py  inspire.py  urdf.py  xhand.py
src/tactile_utils_common/: __init__.py  results.py
tests/: test_offline_shape_alignment.py  test_offline_tactile_to_mano_projection.py  test_online_tactile_mapping.py  test_tactile_pipeline.py
