[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tactile-utils"
version = "0.1.0"
description = "A collection of tactile-sensor utilities."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "PyYAML>=6.0",
]

[project.scripts]
tactile-utils = "sub_modules.tactile_layout_3d_projection.cli:main"
offline-shape-alignment = "sub_modules.offline_shape_alignment.cli:main"
offline-tactile-projection = "offline.cli:main"
online-tactile-map = "online.cli:main"

[project.optional-dependencies]
shape-align = [
    "torch>=2.5",
]

[tool.setuptools.packages.find]
where = ["src"]
